--- a/course-details.css
+++ b/course-details.css
@@ -10,4 +10,9 @@
 .button{
     border: 2px solid rgba(83, 168, 83, 0.831);
     background-color: aqua;
+    border-radius: 10px;
+    width: 120px;
+    height: 50px;
+    
+    font-weight: bold;
 }
