--- a/Course.css
+++ b/Course.css
@@ -1,8 +1,10 @@
 .course{
     display: flex;
     flex-wrap: wrap;
-    border: 2px solid #d6ea42;
+    border: 4px solid #eaaa42;
+    border-radius: 14px;
     padding: 20px;
     gap: 1px;
-    
+    justify-content: center;
+    margin: 20px;
 }
